--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "@elizaos/plugin-node": "0.1.7",
     "@elizaos/plugin-solana": "0.1.7",
     "@elizaos/plugin-starknet": "0.1.7",
-    "@tavily/core": "0.0.2",
-    "amqplib": "0.10.5",
-    "better-sqlite3": "11.5.0",
+    "@tavily/core": "^0.0.2",
+    "amqplib": "^0.10.5",
+    "better-sqlite3": "^11.8.1",
     "fs": "0.0.1-security",
-    "net": "1.0.2",
-    "path": "0.12.7",
-    "readline": "1.3.0",
-    "url": "0.11.4",
-    "ws": "8.18.0",
-    "yargs": "17.7.2"
+    "net": "^1.0.2",
+    "path": "^0.12.7",
+    "readline": "^1.3.0",
+    "url": "^0.11.4",
+    "ws": "^8.18.0",
+    "yargs": "^17.7.2"
   },
   "engines": {
     "node": ">=22"
@@ -44,8 +44,8 @@
     }
   },
   "devDependencies": {
-    "ts-node": "10.9.2",
-    "tsup": "8.3.5",
-    "typescript": "5.6.3"
+    "ts-node": "^10.9.2",
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.3"
   }
 }
